# Learning

./: README.md
AddEven/: CMakeLists.txt  addEven-ut.cpp  addEven.cpp  addEven.hpp  main.cpp
Calculate/: CMakeLists.txt  calculate-ut.cpp  calculate.cpp  calculate.hpp
Fibonacci/: CMakeLists.txt  fibonacci-ut.cpp  fibonacci.cpp  fibonacci.hpp  main.cpp
Firecode/: AreAllCharactersUnique.cpp  FindTheNumberThatAppearsOnce.cpp  FirstNonRepeating.cpp  MaxGain.cpp  Permutation.cpp  SelectionSort.cpp
GenerateSequence/: CMakeLists.txt  generateSequence-ut.cpp  generateSequence.cpp  generateSequence.hpp  main.cpp
MaxOfVector/: CMakeLists.txt  main.cpp  maxOfVector-ut.cpp  maxOfVector.cpp  maxOfVector.hpp
NWDandNWW/: CMakeLists.txt  main.cpp  nwdNww-ut.cpp  nwdNww.cpp  nwdNww.hpp
PasswordCheck/: a.out  main.cpp  validation.cpp  validation.hpp
SeaTradeSimulator/: Alcohol.cpp  Alcohol.hpp  Cargo.cpp  Cargo.hpp  Fruit.cpp  Fruit.hpp  Item.cpp  Item.hpp  main.cpp
Unique_ptr/: CMakeLists.txt  main.cpp  uniquePtr-ut.cpp  uniquePtr.hpp
VectorOfSharedPointers/: CMakeLists.txt  main.cpp  vectorOfSharedPointers-ut.cpp  vectorOfSharedPointers.cpp  vectorOfSharedPointers.hpp
